# object-processing-starter

./: .gitignore  README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
objectprocessor/: pyproject.toml
objectprocessor/objectprocessor/: main.py  person.py  process.py
objectprocessor/tests/: test_example.py
writing/: reflection.md
